package model.entity.Usuario;

public class Administrador {
}
